--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -57,7 +57,8 @@
 }
 
 .code {
-  background: #fafafa;
+
+  background-color: #EDEEF0;
   border-radius: 5px;
   padding: 0.75rem;
   font-size: 1.1rem;
